Add ability to get multiple cities from Wunderground API

--- a/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Store.cs" />
     <Compile Include="UserInterface.cs" />
     <Compile Include="Weather.cs" />
+    <Compile Include="WeatherAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
