Add API fallback method

--- a/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="HighScore.cs" />
     <Compile Include="Inventory.cs" />
+    <Compile Include="Lemon.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
