--- a/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Day.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="HighScore.cs" />
+    <Compile Include="InputHandler.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Lemon.cs" />
     <Compile Include="Player.cs" />
