--- a/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand.csproj
@@ -117,6 +117,7 @@
     <Compile Include="HighScore.cs" />
     <Compile Include="InputHandler.cs" />
     <Compile Include="Inventory.cs" />
+    <Compile Include="Item\Item.cs" />
     <Compile Include="Lemon.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
@@ -129,6 +130,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.108.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.108.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
