--- a/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand.csproj
@@ -108,23 +108,25 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration.cs" />
-    <Compile Include="Credentials.cs" />
-    <Compile Include="Customer.cs" />
-    <Compile Include="Database.cs" />
-    <Compile Include="Day.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="HighScore.cs" />
-    <Compile Include="InputHandler.cs" />
-    <Compile Include="Inventory.cs" />
+    <Compile Include="Config\Configuration.cs" />
+    <Compile Include="Config\Credentials.cs" />
+    <Compile Include="Item\Cup.cs" />
+    <Compile Include="Class\Customer.cs" />
+    <Compile Include="Class\Database.cs" />
+    <Compile Include="Class\Day.cs" />
+    <Compile Include="Class\Game.cs" />
+    <Compile Include="Class\HighScore.cs" />
+    <Compile Include="Player\InputHandler.cs" />
+    <Compile Include="Player\Inventory.cs" />
     <Compile Include="Item\Item.cs" />
-    <Compile Include="Lemon.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Item\Lemon.cs" />
+    <Compile Include="Item\Pitcher.cs" />
+    <Compile Include="Player\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Store.cs" />
-    <Compile Include="UserInterface.cs" />
-    <Compile Include="Weather.cs" />
+    <Compile Include="Class\Store.cs" />
+    <Compile Include="Class\UserInterface.cs" />
+    <Compile Include="Class\Weather.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
