--- a/LemonadeStandTests/LemonadeStandTests.csproj
+++ b/LemonadeStandTests/LemonadeStandTests.csproj
@@ -45,13 +45,18 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DaysTests.cs" />
     <Compile Include="InputHandlerTests.cs" />
+    <Compile Include="InventoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeatherTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LemonadeStand\LemonadeStand.csproj">
